# magiclaw-ros

./: LICENSE  README.md
magiclaw_msgs/: CMakeLists.txt  package.xml
magiclaw_msgs/msg/: MagiClaw.msg
ros1/: CMakeLists.txt  README.md  setup.cfg
ros1/magiclaw/: magiclaw_pub.py
ros1/magiclaw/modules/zmq/: __init__.py
ros1/src/magiclaw/: CMakeLists.txt  package.xml
ros1/src/magiclaw/modules/zmq/: magiclaw.py
ros1/src/magiclaw_msgs/: CMakeLists.txt  package.xml
ros1/src/magiclaw_msgs/msg/: Claw.msg  Finger.msg  Motor.msg
ros2/: README.md  package.xml  setup.cfg
ros2/src/magiclaw/magiclaw/: magiclaw_pub.py
ros2/src/magiclaw_msgs/: CMakeLists.txt  package.xml
ros2/src/magiclaw_msgs/msg/: Phone.msg
