<?xml version="1.0"?>
<package format="2">
  <name>magiclaw_msgs</name>
  <version>0.0.1</version>
  <description>ROS messages for MagiClaw</description>

  <maintainer email="12231112@mail.sustech.edu.cn">Xudong Han</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
