[metadata]
name = magiclaw
version = 1.0.0
author = Xudong Han
author_email = 12231112@mail.susetch.edu.cn
description = A ROS inteface for MagiClaw
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/asMagiclaw/magiclaw-ros
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Robotics

[options]
packages = find:
install_requires =
    numpy
    protobuf
    pyzmq
    opencv-python
    rospy
    sensor_msgs
    cv_bridge
python_requires = >=3.6

[options.entry_points]
console_scripts =
    magiclaw_pub = magiclaw.magiclaw_pub:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/magiclaw
share/magiclaw =
    package.xml

[install]
install_scripts = $base/lib/magiclaw

[develop]
script_dir = $base/lib/magiclaw
