<?xml version="1.0"?>
<package format="2">
  <name>magiclaw</name>
  <version>1.0.0</version>
  <description>ROS1 interface for MagiClaw</description>

  <maintainer email="12231112@mail.sustech.edu.cn">Xudong Han</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>magiclaw_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>magiclaw_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
